// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-alert-dialog SSR > renders default (closed) 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Alert Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  aria-modal="true"
  class="dialog dialog--narrow dialog--close"
  closedby="none"
  role="alertdialog"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Alert!
    </h2>
  </div>
  <div
    class="dialog__main"
    id="GENERATED-1"
  >
    <p>
      You must acknowledge this alert to continue.
    </p>
  </div>
  <div
    class="dialog__footer"
  >
    <button
      aria-describedby="GENERATED-1"
      autofocus=""
      class="btn btn--primary"
      type="button"
    >
      OK
    </button>
  </div>
</dialog>"
`;

exports[`evo-alert-dialog SSR > renders in open state 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Alert Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  aria-modal="true"
  class="dialog dialog--narrow"
  closedby="none"
  role="alertdialog"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Alert!
    </h2>
  </div>
  <div
    class="dialog__main"
    id="GENERATED-1"
  >
    <p>
      You must acknowledge this alert to continue.
    </p>
  </div>
  <div
    class="dialog__footer"
  >
    <button
      aria-describedby="GENERATED-1"
      autofocus=""
      class="btn btn--primary"
      type="button"
    >
      OK
    </button>
  </div>
</dialog>"
`;
